# visual-midi

./: .gitignore  ARCHITECTURE.md  README.md  package.json  pyproject.toml
configs/: curve.yaml  demo.yaml  korg_nts1_mk1.yaml  l6.yaml  monotron.yaml  mutator.yaml  nts1.yaml  pretty_sequence.yaml  shahi.yaml  synth2.yaml  synth3.yaml
schemas/: visual-midi.schema.json
src/visual_midi/: app.py
src/visual_midi/web/: api.js  app.js  dom.js  index.html  layout.js  styles.css
src/visual_midi/web/controls/: button.js  curve.js  keyboard.js  lfo.js  memory.js  mutator.js  sequencer.js  slider.js  tempo.js
src/visual_midi/web/ui/: button.js  slider.js
src/visual_midi/web/utils/: layout.js  math.js  music.js
