[project]
name = "visual-midi"
version = "0.1.0"
description = "Config-driven MIDI controller UI with persistent slider state."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mido>=1.3.2",
  "python-rtmidi>=1.5.8",
  "PyYAML>=6.0.2",
  "qrcode[pil]>=7.4.2",
]

[project.scripts]
visual-midi = "visual_midi.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
